Fix z-index of popover

--- a/resources/assets/sass/_popover.sass
+++ b/resources/assets/sass/_popover.sass
@@ -9,7 +9,7 @@
   height: 100%
   background: rgba(0, 0, 0, 0.85)
   overflow: auto
-  z-index: 100
+  z-index: 150
 
 #popover-content
   position: fixed
